// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default message if no error message 1`] = `
<Loading
  classes={
    Array [
      "background--alert",
    ]
  }
  styles={
    Object {
      "color": "red",
    }
  }
>
  <div
    className="locked-top locked-bottom one-whole floating"
  >
    <div
      className="floating__item"
    >
      <h4
        className="text-light-primary"
      >
        test msg
      </h4>
      <p
        className="text-light-primary hard"
      >
        An unexpected error occured
      </p>
    </div>
  </div>
</Loading>
`;

exports[`renders with error.error 1`] = `
<Loading
  classes={
    Array [
      "background--alert",
    ]
  }
  styles={
    Object {
      "color": "red",
    }
  }
>
  <div
    className="locked-top locked-bottom one-whole floating"
  >
    <div
      className="floating__item"
    >
      <h4
        className="text-light-primary"
      >
        test msg
      </h4>
      <p
        className="text-light-primary hard"
      >
        error message
      </p>
    </div>
  </div>
</Loading>
`;

exports[`renders with props 1`] = `
<Loading
  classes={
    Array [
      "background--alert",
    ]
  }
  styles={
    Object {
      "color": "red",
    }
  }
>
  <div
    className="locked-top locked-bottom one-whole floating"
  >
    <div
      className="floating__item"
    >
      <h4
        className="text-light-primary"
      >
        test msg
      </h4>
      <p
        className="text-light-primary hard"
      >
        another message
      </p>
    </div>
  </div>
</Loading>
`;
